Bug 1134648, handle dynamic changes to rel=dns-prefetch, r=bz